--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio de [Votre Nom] - Développeur Web Full-Stack | HTML, CSS, JavaScript, React">
     <title>Djetchoang Hariel - Développeur Web Full-Stack</title>
+    <link href="style.css" rel="stylesheet>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!-- Dans le <head> -->
 <meta name="description" content="Portfolio de [Djetchoang Hariel] - Développeur Web Full-Stack spécialisé en React, Node.js et JavaScript. Découvrez mes projets et contactez-moi pour vos besoins de développement.">
